updated conclusions formatting

--- a/Assignment_2_CO_198.ipynb
+++ b/Assignment_2_CO_198.ipynb
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Conclusion:** Here, first we used the cannyedge detector and then lines were found with Hough Transform using edegs detected by Canny Edge detector. Everything explained above is encapsulated in the OpenCV function, cv2.HoughLines(). It simply returns an array of (\\rho, \\theta) values. \\rho is measured in pixels and \\theta is measured in radians. First parameter, Input image should be a binary image, so apply threshold or use canny edge detection before finding applying hough transform. Second and third parameters are \\rho and \\theta accuracies respectively. Fourth argument is the threshold, which means minimum vote it should get for it to be considered as a line. Remember, number of votes depend upon number of points on the line. So it represents the minimum length of line that should be detected.\n"
+    "**Conclusion:** Here, first we used the cannyedge detector and then lines were found with Hough Transform using edegs detected by Canny Edge detector. Everything explained above is encapsulated in the OpenCV function, `cv2.HoughLines()`. It simply returns an array of (`rho`, `theta`) values. `rho` is measured in pixels and `theta` is measured in radians. First parameter, Input image should be a binary image, so apply threshold or use canny edge detection before finding applying hough transform. Second and third parameters are `rho` and `theta` accuracies respectively. Fourth argument is the threshold, which means minimum vote it should get for it to be considered as a line. Remember, number of votes depend upon number of points on the line. So it represents the minimum length of line that should be detected.\n"
    ]
   },
   {
@@ -363,17 +363,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Conclusion:**  cv2.HoughCircles has been used to find the circles in image with Parameters:\t\n",
-    "image – 8-bit, single-channel, grayscale input image.\n",
-    "circles – Output vector of found circles. Each vector is encoded as a 3-element floating-point vector (x, y, radius) .\n",
-    "circle_storage – In C function this is a memory storage that will contain the output sequence of found circles.\n",
-    "method – Detection method to use. Currently, the only implemented method is CV_HOUGH_GRADIENT , which is basically 21HT.\n",
-    "dp – Inverse ratio of the accumulator resolution to the image resolution. For example, if dp=1 , the accumulator has the same resolution as the input image. If dp=2 , the accumulator has half as big width and height.\n",
-    "minDist – Minimum distance between the centers of the detected circles. If the parameter is too small, multiple neighbor circles may be falsely detected in addition to a true one. If it is too large, some circles may be missed.\n",
-    "param1 – First method-specific parameter. In case of CV_HOUGH_GRADIENT , it is the higher threshold of the two passed to the Canny() edge detector (the lower one is twice smaller).\n",
-    "param2 – Second method-specific parameter. In case of CV_HOUGH_GRADIENT , it is the accumulator threshold for the circle centers at the detection stage. The smaller it is, the more false circles may be detected. Circles, corresponding to the larger accumulator values, will be returned first.\n",
-    "minRadius – Minimum circle radius.\n",
-    "maxRadius – Maximum circle radius."
+    "**Conclusion:**  `cv2.HoughCircles()` has been used to find the circles in image with Parameters:\t\n",
+    "- image – 8-bit, single-channel, grayscale input image.\n",
+    "- method – Detection method to use. Currently, the only implemented method is `CV_HOUGH_GRADIENT` , which is basically 21HT.\n",
+    "- dp – Inverse ratio of the accumulator resolution to the image resolution. For example, if dp=1 , the accumulator has the same resolution as the input image. If dp=2 , the accumulator has half as big width and height.\n",
+    "- minDist – Minimum distance between the centers of the detected circles. If the parameter is too small, multiple neighbor circles may be falsely detected in addition to a true one. If it is too large, some circles may be missed.\n",
+    "- param1 – First method-specific parameter. In case of `CV_HOUGH_GRADIENT` , it is the higher threshold of the two passed to the Canny edge detector (the lower one is twice smaller).\n",
+    "- param2 – Second method-specific parameter. In case of `CV_HOUGH_GRADIENT` , it is the accumulator threshold for the circle - centers at the detection stage. The smaller it is, the more false circles may be detected. Circles, corresponding to the larger accumulator values, will be returned first."
    ]
   },
   {
@@ -486,13 +482,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Conclusion:** cv2.cornerHarris has been used with parameters:\t\n",
-    "src – Input single-channel 8-bit or floating-point image.\n",
-    "dst – Image to store the Harris detector responses. It has the type CV_32FC1 and the same size as src .\n",
-    "blockSize – Neighborhood size (see the details on cornerEigenValsAndVecs() ).\n",
-    "ksize – Aperture parameter for the Sobel() operator.\n",
-    "k – Harris detector free parameter. See the formula below.\n",
-    "borderType – Pixel extrapolation method."
+    "**Conclusion:** `cv2.cornerHarris()` has been used with parameters:\t\n",
+    "- src – Input single-channel 8-bit or floating-point image.\n",
+    "- blockSize – Neighborhood size.\n",
+    "- ksize – Aperture parameter for the Sobel() operator.\n",
+    "- k – Harris detector free parameter."
    ]
   },
   {
@@ -626,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
