--- a/Assignment_2_CO_236.ipynb
+++ b/Assignment_2_CO_236.ipynb
@@ -116,7 +116,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Conclusion:** Here we used the canny edge detector to find the edges in the image and plotted them on the original image. Here, in `cv2.Canny(image, threshold_1, threshold_2)` function we used 3 parameters **(i)** the original image variable, **(ii)** Lower Threshold, and **(iii)** Upper Threshold. The significance of thresholds is that the edges having a weight greater than the upper threshold are definitely included and the edges having weight less than the lower threshold are discarded. but the edges with a weight between the two thresholds are included depending on if they are connected to any edge with a weight greater than the upper Threshold. "
+    "**Conclusion:** Here we used the canny edge detector to find the edges in the image and plotted them on the original image. Here, in `cv2.Canny(image, threshold_1, threshold_2)` function we used 3 parameters **(i)** the original image variable, **(ii)** Lower Threshold, and **(iii)** Upper Threshold. The significance of thresholds is that the edges having a weight greater than the upper threshold are definitely included and the edges having weight less than the lower threshold are discarded. but the edges with a weight between the two thresholds are included depending on if they are connected to any edge with a weight greater than the upper Threshold. \n",
+    "\n",
+    "The detected Edges can be scene in output image in green colour."
    ]
   },
   {
@@ -247,7 +249,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Conclusion:** Here, first we used the cannyedge detector and then lines were found with Hough Transform using edegs detected by Canny Edge detector. Everything explained above is encapsulated in the OpenCV function, `cv2.HoughLines()`. It simply returns an array of (`rho`, `theta`) values. `rho` is measured in pixels and `theta` is measured in radians. First parameter, Input image should be a binary image, so apply threshold or use canny edge detection before finding applying hough transform. Second and third parameters are `rho` and `theta` accuracies respectively. Fourth argument is the threshold, which means minimum vote it should get for it to be considered as a line. Remember, number of votes depend upon number of points on the line. So it represents the minimum length of line that should be detected."
+    "**Conclusion:** Here, first we used the cannyedge detector and then lines were found with Hough Transform using edegs detected by Canny Edge detector. Everything explained above is encapsulated in the OpenCV function, `cv2.HoughLines()`. It simply returns an array of (`rho`, `theta`) values. `rho` is measured in pixels and `theta` is measured in radians. First parameter, Input image should be a binary image, so apply threshold or use canny edge detection before finding applying hough transform. Second and third parameters are `rho` and `theta` accuracies respectively. Fourth argument is the threshold, which means minimum vote it should get for it to be considered as a line. Remember, number of votes depend upon number of points on the line. So it represents the minimum length of line that should be detected.\n",
+    "\n",
+    "The detected lines can be scene in the output image in green colour. "
    ]
   },
   {
@@ -363,13 +367,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Conclusion:** `cv2.HoughCircles()` has been used to find the circles in image with Parameters:\t\n",
-    "- image – 8-bit, single-channel, grayscale input image.\n",
-    "- method – Detection method to use. Currently, the only implemented method is `CV_HOUGH_GRADIENT` , which is basically 21HT.\n",
-    "- dp – Inverse ratio of the accumulator resolution to the image resolution. For example, if dp=1 , the accumulator has the same resolution as the input image. If dp=2 , the accumulator has half as big width and height.\n",
-    "- minDist – Minimum distance between the centers of the detected circles. If the parameter is too small, multiple neighbor circles may be falsely detected in addition to a true one. If it is too large, some circles may be missed.\n",
-    "- param1 – First method-specific parameter. In case of `CV_HOUGH_GRADIENT` , it is the higher threshold of the two passed to the Canny edge detector (the lower one is twice smaller).\n",
-    "- param2 – Second method-specific parameter. In case of `CV_HOUGH_GRADIENT` , it is the accumulator threshold for the circle - centers at the detection stage. The smaller it is, the more false circles may be detected. Circles, corresponding to the larger accumulator values, will be returned first."
+    "**Conclusion:** `cv2.HoughCircles()` has been used to find the circles in the image. Some parameters are used to work out this task. The First parameter after the source image is `method` which is the Detection method to use. Currently, the only implemented method is `CV_HOUGH_GRADIENT` , which is basically 21HT. Second parameter is `dp`, The inverse ratio of the accumulator resolution to the image resolution. For example, if dp=1 , the accumulator has the same resolution as the input image. If dp=2 , the accumulator has half as big width and height. Third parameter is `minDist`, the minimum distance between the centers of the detected circles. If the parameter is too small, multiple neighbor circles may be falsely detected in addition to a true one. If it is too large, some circles may be missed. At last we have two method-specific parameter `param1` and `param2` used in case of `CV_HOUGH_GRADIENT`. `param1` is the higher threshold of the two passed to the Canny edge detector (the lower one is twice smaller). `param2` is the accumulator threshold for the circle - centers at the detection stage. The smaller it is, the more false circles may be detected. Circles, corresponding to the larger accumulator values, will be returned first.\n",
+    "\n",
+    "The Detected Circles are drawn on original image using green colour with red centers."
    ]
   },
   {
@@ -482,11 +482,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Conclusion:** `cv2.cornerHarris()` has been used with parameters:\t\n",
-    "- src – Input single-channel 8-bit or floating-point image.\n",
-    "- blockSize – Neighborhood size.\n",
-    "- ksize – Aperture parameter for the Sobel() operator.\n",
-    "- k – Harris detector free parameter."
+    "**Conclusion:** Here, we used `cv2.cornerHarris()` method to detect corners in the source image along with some parameters. First, `blockSize` is the size neighborhood in pixels. And then, `ksize` is the aperture parameter for the Sobel() operator. Last, `k` is harris detector free parameter. After finding corners, we used `cv2.dilate()` to make them visible. Then thresholded the points to remove unnecessary small corners. \n",
+    "\n",
+    "The green points on the output image are the detected corners."
    ]
   },
   {
@@ -600,7 +598,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Conclusion:**"
+    "**Conclusion:** Here, `cv2.FastFeatureDetector_create()` is used to initiate the detector object. Here, we used default values to make it more generalized, one can define their own parameters for specific task. Then `fast.detect()` method is used on grayed image to detect the keypoints and the detected keywords are drawen on the original image using `cv2.drawKeypoints()`.\n",
+    "\n",
+    "Keypoints can be scene in the output image above in green colour. "
    ]
   }
  ],
